# jellyfin-rpc

./: README.md  jellyfin_rpc.ini  main.spec  pyproject.toml
.github/workflows/: pyinstaller.yaml
src/jellyfin_rpc/: app.py  main.py
